--- a/essays/E11.md
+++ b/essays/E11.md
@@ -12,7 +12,7 @@ labels:
 ---
 <img width="200px" 
      class="rounded float-start pe-4" 
-     src="[../img/difficulty/degree_difficulty.jpg](https://xtracta.com/wp-content/uploads/2020/08/OCR.jpg)" >
+     src="https://xtracta.com/wp-content/uploads/2020/08/OCR.jpg" >
      
 *The following is a technical essay assignment for ICS314: Write a technical essay that discusses why smart questions are important for smart software engineers, how the chosen questions fulfill (or not) the precepts for smart questions, how the responses reflect the smartness (or lack thereof), and the insights you gained as a result of this experience.*
 
