--- a/essays/E11.md
+++ b/essays/E11.md
@@ -14,11 +14,11 @@ labels:
      class="rounded float-start pe-4" 
      src="https://xtracta.com/wp-content/uploads/2020/08/OCR.jpg" >
      
-*The following is a technical essay assignment for ICS314: Write a technical essay that discusses why smart questions are important for smart software engineers, how the chosen questions fulfill (or not) the precepts for smart questions, how the responses reflect the smartness (or lack thereof), and the insights you gained as a result of this experience.*
+*The following is a technical essay assignment for ICS314:*
 
-‘There is no such thing as a stupid question’ or ‘the only dumb question is the one that isn’t asked’ are a couple common phrases about the nature of asking questions I have heard repeatedly throughout my life. In the open source software module of my ICS314 course at UH Manoa, we were introduced to a different perspective about questions pertaining to software development. We were instructed to read an essay published by Eric Steven Raymond, or ESR - a computer scientist, author of ‘The Cathedral and the Bazaar’ and proponent of the free software movement; the essay, *’How To Ask Questions The Smart Way’* was a required reading for the course.
+‘There is no such thing as a stupid question’ or ‘the only dumb question is the one that isn’t asked’ are a couple common phrases about asking questions I have heard repeatedly throughout my life. In the open source software module of my ICS314 course at UH Manoa, we were introduced to a different perspective about questions pertaining to software development. The essay *’How To Ask Questions The Smart Way’* published by Eric Steven Raymond, or ESR - a computer scientist, author of ‘The Cathedral and the Bazaar’ and proponent of the free software movement; offers a solution for asking 'smart' and 'not smart' questions.
 
-So, what is a good question (*in terms of asking for help on software forums*)? According to ESR, a good question is one who’s answer is not easily found and does not waste the time of the well meaning people who are offering their help and expertise for free, which I completely agree with and understand. The basis of what makes a good smart question is that you cannot find the answer by yourself, by reading a manual, a forum, blog or in source code. The secondary and tertiary components of a good question are that it is detailed, written in clear language and goal oriented. 
+So, what is a good question *in terms of asking for help on software forums*? According to ESR, a good question is one who’s answer is not easily found and does not waste the time of the well meaning people who are offering their help and expertise for free, which I completely agree with and understand. The basis of what makes a good smart question is that you cannot find the answer through research of manuals, a forums, blogs or source code. The tertiary components of a good question are that it is detailed, written in clear language and goal oriented. 
 
 Below, are two examples of basic JavaScript questions posed to Stack Overflow outlining the differences between ‘smart’ and ‘not smart’ questions.
 
